--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,22 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependencies
+node_modules/
+__pycache__/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Environment variables
+.env
 
-# testing
-/coverage
+# Dataset files
+data/*.csv
 
-# production
-/build
+# Trained models
+models/*.pkl
 
-# misc
+# Logs
+*.log
+
+# IDE files
+.vscode/
+.idea/
+
+# OS files
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
