--- a/package.json
+++ b/package.json
@@ -1,15 +1,108 @@
 {
   "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.9",
+    "@mui/material": "^6.1.9",
+    "accepts": "^1.3.8",
+    "anymatch": "^3.1.3",
+    "array-flatten": "^1.1.1",
+    "axios": "^1.7.8",
+    "balanced-match": "^1.0.2",
+    "binary-extensions": "^2.3.0",
+    "body-parser": "^1.20.3",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.3",
+    "bytes": "^3.1.2",
+    "call-bind": "^1.0.7",
+    "chokidar": "^3.6.0",
+    "concat-map": "^0.0.1",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.5",
+    "cookie": "^0.7.1",
+    "cookie-signature": "^1.0.6",
+    "cors": "^2.8.5",
+    "define-data-property": "^1.1.4",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "dotenv": "^10.0.0",
+    "ee-first": "^1.1.1",
+    "encodeurl": "^2.0.0",
+    "es-define-property": "^1.0.0",
+    "es-errors": "^1.3.0",
+    "escape-html": "^1.0.3",
+    "etag": "^1.8.1",
+    "express": "^4.21.1",
+    "fill-range": "^7.1.1",
+    "finalhandler": "^1.3.1",
+    "forwarded": "^0.2.0",
+    "fresh": "^0.5.2",
+    "fsevents": "^2.3.3",
+    "function-bind": "^1.1.2",
+    "get-intrinsic": "^1.2.4",
+    "gopd": "^1.1.0",
+    "has-property-descriptors": "^1.0.2",
+    "has-proto": "^1.0.3",
+    "has-symbols": "^1.0.3",
+    "hasown": "^2.0.2",
+    "http-errors": "^2.0.0",
+    "ignore-by-default": "^1.0.1",
+    "inherits": "^2.0.4",
+    "is-binary-path": "^2.1.0",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "media-typer": "^0.3.0",
+    "merge-descriptors": "^1.0.3",
+    "methods": "^1.1.2",
+    "mime": "^1.6.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "minimatch": "^3.1.2",
+    "ms": "^2.1.3",
+    "nodemon": "^2.0.22",
+    "normalize-path": "^3.0.0",
+    "object-assign": "^4.1.1",
+    "object-inspect": "^1.13.3",
+    "on-finished": "^2.4.1",
+    "papaparse": "^5.4.1",
+    "parseurl": "^1.3.3",
+    "path-to-regexp": "^0.1.10",
+    "picomatch": "^2.3.1",
+    "proxy-addr": "^2.0.7",
+    "pstree.remy": "^1.1.8",
+    "python-shell": "^3.0.1",
+    "qs": "^6.13.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^7.0.1",
+    "react-scripts": "^5.0.1",
+    "readdirp": "^3.6.0",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "send": "^0.19.0",
+    "serve-static": "^1.16.2",
+    "set-function-length": "^1.2.2",
+    "setprototypeof": "^1.2.0",
+    "side-channel": "^1.0.6",
+    "simple-update-notifier": "^1.1.0",
+    "statuses": "^2.0.1",
+    "styled-components": "^6.1.13",
+    "to-regex-range": "^5.0.1",
+    "toidentifier": "^1.0.1",
+    "touch": "^3.1.1",
+    "type-is": "^1.6.18",
+    "undefsafe": "^2.0.5",
+    "unpipe": "^1.0.0",
+    "utils-merge": "^1.0.1",
+    "vary": "^1.1.2",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,12 +110,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "browserslist": {
     "production": [
       ">0.2%",
